--- a/data/pathfinder-bestiary-3/hh7OuFB5BQIrfeRT.htm
+++ b/data/pathfinder-bestiary-3/hh7OuFB5BQIrfeRT.htm
@@ -1,6 +1,6 @@
 Name: Kasa-obake
-Nom: 
-État: aucune
+Nom: Kasa-obaké (Tsukumogami)
+État: libre
 
 ------ Description (en) ------
 <p>Tsukumogami are intelligent, mobile objects formed from the union between a 100-year-old object and a kami. Tsukumogami range from harmless to malicious, each individual personality a result of how the object was treated before its awakening. Well-cared-for objects tend to birth helpful, friendly tsukumogami, while mistreated or abandoned objects twist into malevolent and violent beings.Most tsukumogami are, by nature, mischievous, and oftentimes want nothing more than to occupy the attention of living creatures.</p>
@@ -8,3 +8,7 @@ Nom:
 <hr />
 <p>The jerky stomping outside in the middle of the night belongs to the kasa-obake. Though their appearances vary, most kasa-obake resemble an umbrella with a humanoid leg or two protruding where one might expect a handle. It has one or two eyes and can have up to two arms, or no arms at all. Kasa-obake adore wordplay and puns and delight in learning new ones, especially as language evolves over time. Though they enjoy giving living creatures the occasional scare, kasa-obake rarely, if ever, attack.</p>
 ------ Description (fr) ------
+<p>Les Tsukumogami sont des objets intelligents et mobiles formés par l'union entre un objet centenaire et un Kami. Les Tsukumogami vont de l'inoffensif au malveillant, chaque personnalité individuelle résultant de la façon dont l'objet a été traité avant son éveil. Les objets bien entretenus ont tendance à donner naissance à des Tsukumogami serviables et amicaux, tandis que les objets maltraités ou abandonnés se tordent en êtres malveillants et violents. La plupart des Tsukumogami sont, par nature, espiègles, et ne veulent souvent rien d'autre qu'occuper l'attention des créatures vivantes.</p>
+<p>Les Tsukumogami peuvent généralement être trouvés dans les régions où il existe une forte croyance culturelle dans la valeur de l'entretien des objets, ce qui aide les objets à survivre assez longtemps pour devenir des Tsukumogami. Les villes et les villages avec de grandes populations de Tsukumogami sont appelés "villes sans sommeil" en raison des célébrations nocturnes de Tsukumogami, qui peuvent devenir si bruyantes qu'elles empêchent les résidents vivants de dormir paisiblement.</p>
+<hr />
+<p>Le piétinement saccadé à l'extérieur au milieu de la nuit appartient au Kasa-obaké. Bien que leurs apparences varient, la plupart des Kasa-obakés ressemblent à un parapluie avec une ou deux jambes humanoïdes dépassant là où on pourrait s'attendre à une poignée. Il a un ou deux yeux et peut avoir jusqu'à deux bras, ou pas de bras du tout. Les Kasa-obakés adorent les jeux de mots et les calembours et se plaisent à en apprendre de nouveaux, surtout lorsque le langage évolue avec le temps. Bien qu'ils aiment faire peur aux créatures vivantes à l'occasion, les Kasa-obakés attaquent rarement, voire jamais.</p>
