--- a/data/pathfinder-bestiary-3/cWlntwaa4HPFEf3u.htm
+++ b/data/pathfinder-bestiary-3/cWlntwaa4HPFEf3u.htm
@@ -1,9 +1,12 @@
 Name: Sturzstromer
-Nom: 
-État: aucune
+Nom: Sturzstomeur
+État: libre
 
 ------ Description (en) ------
 <p>Cobble mites resemble squarish stones a few inches across with mouths like split geodes. Though indolent and harmless alone, they're dangerous in large groups.</p>
 <hr />
 <p>Cobble mites that remain a cohesive swarm for many years become dangerous living landslides.</p>
 ------ Description (fr) ------
+<p>Les teignes-pavé ressemblent à des pierres carrées de quelques centimètres de diamètre avec des bouches comme des géodes fendues. Bien qu'indolents et inoffensifs seuls, ils sont dangereux en grand groupe.</p>
+<hr />
+<p>Les nuées de teignes-pavé qui forment pendant plusieurs années un amalgame cohésif deviennent de dangereux glissements de terrain vivants.</p>
