--- a/data/pathfinder-bestiary-3/BZKNSyp1ATtn3JXj.htm
+++ b/data/pathfinder-bestiary-3/BZKNSyp1ATtn3JXj.htm
@@ -1,7 +1,8 @@
 Name: Adachros
-Nom: 
-État: aucune
+Nom: Adachros (Énnosite)
+État: libre
 
 ------ Description (en) ------
 <p>When a nascent demiplane fails to coalesce, its quintessence sometimes collapses into an adachros, a dangerous entity that combines overwhelming mental potential with no exposure to alternate viewpoints. Some of these megalomaniacal beings are tyrants, creating illusory kingdoms populated by abducted creatures forced to validate the creator's views. A more altruistic adachros might seek out pupils to reeducate and advise-though often without their consent-while always pushing their students to accept whatever unique philosophy was involved in their creation. An adachros might abandon disciples who spurn them, but more often, they become a bitter enemy, intent on destroying the perceived heretics.</p>
 ------ Description (fr) ------
+<p>Lorsqu'un demi-plan naissant échoue à se coaliser, sa quintessence s'effondre parfois en un Adachros, une entité dangereuse qui combine un potentiel mental écrasant et une absence d'exposition à des points de vue alternatifs. Certains de ces êtres mégalomanes sont des tyrans, créant des royaumes illusoires peuplés de créatures enlevées et forcées de valider les vues du créateur. Un Adachros plus altruiste peut chercher à rééduquer et à conseiller ses élèves, souvent sans leur consentement, tout en les poussant à accepter la philosophie unique qui a présidé à leur création. Un Adachros pourrait abandonner les disciples qui le repoussent, mais le plus souvent, il devient un ennemi acharné, déterminé à détruire les hérétiques perçus.</p>
