--- a/data/pathfinder-bestiary-3/O9TQjp3scKfW8SZK.htm
+++ b/data/pathfinder-bestiary-3/O9TQjp3scKfW8SZK.htm
@@ -1,6 +1,6 @@
 Name: Shulsaga
-Nom: 
-État: aucune
+Nom: Shulsaga (Énnosite)
+État: libre
 
 ------ Description (en) ------
 <p>The Astral Plane is a planar nexus, connecting the planes of the Inner Sphere to those of the Outer Sphere, a realm of timeless silver substance charged with mental essence drawn from throughout the Great Beyond. Most creatures on the Astral Plane are visitors-predators seeking to poach from the River of Souls, psychopomps guarding against such incursions, and aeons monitoring the flow of raw quintessence through the Antipode. Yet, this plane has spawned creatures native to its strange currents and eddies, foremost of which is the family of thought-spawned creatures known as ennosites.</p>
@@ -10,3 +10,9 @@ Nom:
 <p>Though often stern and standoffish, shulsagas occasionally befriend and recruit strangers to help them repair planar wounds and track down foes of the natural order.</p>
 <p>Among ennosites, shulsagas are the most inclined to adopt and nurture iotons, forming small family units. Communities work together to instill enough culture and identity for these iotons to take on permanent forms-those of adolescent shulsagas. Each shulsaga's gender reflects of their evolving identity, influenced in part by the blend of traits their communities imparted and their own thoughts.</p>
 ------ Description (fr) ------
+<p>Le Plan Astral est un nexus planaire, reliant les plans de la Sphère Intérieure à ceux de la Sphère Extérieure, un royaume de substance argentée intemporelle chargée d'essence mentale puisée dans tout le Grand Au-delà. La plupart des créatures du plan astral sont des visiteurs - des prédateurs qui cherchent à s'approvisionner dans la Rivière des âmes, des psychopompes qui se protègent contre de telles incursions et des Éons qui surveillent le flux de quintessence brute à travers l'Antipode. Pourtant, ce plan a engendré des créatures natives de ses étranges courants et tourbillons, au premier rang desquels la famille des créatures engendrées par la pensée, connues sous le nom d'Énnosites.</p> 
+<p>La forme d'un Énnosite incarne physiquement de sa pensée et de son but. Comme certains idéaux et objectifs sont partagés, il en va de même pour certaines formes.</p>
+<hr />
+<p>Bergers de la Mer d'Argent, les Shulsagas patrouillent dans le Plan Astral pour protéger les demi-plans naissants qui s'y forment, repoussant ceux qui voudraient usurper les demi-plans ou les spolier avec des philosophies malvenues. Cette tutelle s'étend au plan astral dans son ensemble, car les Shulsagas ne se contentent pas d'exiler les intrus, ils recherchent également les failles planaires et les referment. Les brèches particulièrement flagrantes exaspèrent ces Énnosites au point de les envahir, et des raids de Shulsagas en groupe étendent souvent leurs attaques bien au-delà d'un portail pour assurer la destruction totale de la menace.</p> 
+<p>Bien que souvent sévères et distants, les Shulsagas se lient occasionnellement d'amitié avec des étrangers et les recrutent pour les aider à réparer les blessures planaires et à traquer les ennemis de l'ordre naturel.</p> 
+<p>Parmi les Énnosites, les Shulsagas sont les plus enclins à adopter et à élever des Iotons, formant de petites unités familiales. Les communautés travaillent ensemble pour inculquer suffisamment de culture et d'identité pour que ces Iotons prennent des formes permanentes - celles de  Shulsagas adolescents. Le sexe de chaque Shulsaga est le reflet de son identité en évolution, influencée en partie par le mélange de traits transmis par leur communauté et de leurs propres pensées.</p>
