--- a/data/feats/class-08-3xD4LtEgpGZU0MNx.htm
+++ b/data/feats/class-08-3xD4LtEgpGZU0MNx.htm
@@ -2,7 +2,7 @@ Name: Syu Tak-nwa's Hexed Locks
 Nom: Boucles de maléfices de Syu Tak-nwa
 PrereqEN: |Living Hair
 PrereqFR: Cheveux vivants
-État: libree
+État: libre
 
 ------ Description (en) ------
 <p>Your hair unarmed attack gains the reach trait. You can deliver hexes through your hair. When you successfully cast a hex focus spell that requires 2 or more actions to cast and that doesn't require a spell attack roll, if your target is within your reach, as part of the spellcasting activity you can make a hair Strike against the foe before applying any effects of the hex. If this Strike misses, the hex has no effect.</p>
