--- a/data/pathfinder-bestiary-3/FvywQFbFzwLV8mvW.htm
+++ b/data/pathfinder-bestiary-3/FvywQFbFzwLV8mvW.htm
@@ -1,6 +1,6 @@
 Name: Flaming Skull
 Nom: Crâne enflammé
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>Beheaded are the reanimated heads of decapitation victims. These mindless undead fly through the air or roll around to attack their prey.</p>
