--- a/data/pathfinder-bestiary-3/cMBXcfS0DuZ7O2vm.htm
+++ b/data/pathfinder-bestiary-3/cMBXcfS0DuZ7O2vm.htm
@@ -1,6 +1,6 @@
 Name: Pukwudgie
-Nom: 
-État: aucune
+Nom: Pukwudgie
+État: libre
 
 ------ Description (en) ------
 <p>Pukwudgies go by many names in many regions, but those who know of them agree that defying their mischievous nature provokes their wrath.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>Pukwudgies make their villages in the oldest forests, concealed under @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Hallucinatory Terrain} spells and @Compendium[pf2e.spells-srd.nA0XlPsnMNrQMpio]{Fantastic Facade} rituals. They travel freely between the Material Plane and the First World through tiny portals beneath hills, trees, or stones. No strangers to violence, pukwudgies rarely travel alone and often anoint their quills or weapons with a custom-brewed poison before entering hostile situations.</p>
 <p>Standing about 2 feet tall, a pukwudgie sports sharp quills growing from their head that extends down their back. Their skin tone varies by the region in which they live, ranging from pale gray to brown.</p>
 ------ Description (fr) ------
+<p>Les pukwudgies portent de nombreux noms dans de nombreuses régions différentes, mais ceux qui les connaissent s'accordent à dire que défier leur nature espiègle provoque leur colère.</p>
+<p>Dans les temps anciens, les pukwudgies ont voyagé vers le Plan matériel depuis le Premier Monde, peut-être dans le sillage de l'émigration des gnomes. Ces fiers fey sont obsédés par les manifestations de respect, et s'ils ont d'abord tenté de se lier d'amitié avec les mortels, chaque tentative s'est soldée par une tragédie, car les pukwudgies percevaient tout affront potentiel comme une grave insulte. Les mortels, craignant ces réactions, commencèrent à considérer les pukwudgies comme des nuisances, et les pukwudgies commencèrent à leur tour à en vouloir aux mortels et aux dieux qui les favorisaient. Au mieux, les pukwudgies font des blagues cruelles aux mortels qu'ils rencontrent. Dans le pire des cas, ils sont connus pour kidnapper et même tuer ceux qui ne les traitent pas avec le respect qui s'impose.</p>
+<p>Les pukwudgies font leurs villages dans les forêts les plus anciennes, dissimulés sous des rituels de @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Terrain hallucinatoire} et de @Compendium[pf2e.spells-srd.nA0XlPsnMNrQMpio]{Façade fantastique}. Ils voyagent librement entre le Plan Matériel et le Premier Monde à travers de minuscules portails situés sous des collines, des arbres ou des pierres. N'étant pas étrangers à la violence, les pukwudgies voyagent rarement seuls et enduisent souvent leurs piquants ou leurs armes d'un poison fabriqué sur mesure avant de s'engager dans des situations hostiles.</p>
+<p>Pourvu d'une taille d'environ 70 centimère, un pukwudgie arbore des piquants acérés qui poussent sur sa tête et s'étendent le long de son dos. Le teint de leur peau varie selon la région où ils vivent, allant du gris pâle au brun.</p>
