--- a/data/feats/class-20-OliKxFIqzky2o6vk.htm
+++ b/data/feats/class-20-OliKxFIqzky2o6vk.htm
@@ -1,12 +1,12 @@
 Name: Ringmaster's Introduction
-Nom: 
+Nom: Introduction du Maître de piste
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
-Avantage: 
+Avantage: Vous accélérez un allié qui n'a pas encore agi dans le combat.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> The ally hasn't acted in the current combat.</p>
@@ -14,3 +14,7 @@ Avantage:
 <hr />
 <p>You announce the triggering ally with a litany of their legendary achievements, spurring them to action. The target is @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} this turn and can spend the extra action to Stride, Strike, Demoralize, Feint, or Perform.</p>
 ------ Description (fr) ------
+<p><strong>Conditions</strong> L'allié n'a pas agi dans le combat en cours.</p>
+<p><strong>Déclencheur</strong> Le tour d'un allié commence.</p>
+<hr />
+<p>Vous annoncez l'allié déclencheur par la litanie de ses réalisations légendaires, le poussant à l'action. La cible est @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accélérée} ce tour-ci et peut dépenser l'action supplémentaire pour Marcher rapidement, Frapper, Démoraliser, Feinter ou donner une Représentation.</p>
