--- a/data/feats/class-20-xqjPVZezw1a73JAO.htm
+++ b/data/feats/class-20-xqjPVZezw1a73JAO.htm
@@ -1,8 +1,8 @@
 Name: Worldsphere Gravity
-Nom: 
+Nom: Gravité du globe terrestre
 PrereqEN: 
 PrereqFR: 
-État: aucune
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: 
@@ -13,3 +13,10 @@ Avantage:
 <p><strong>Gravitational Morass</strong> The pull of gravity is amplified here, creating greater difficult terrain. Flying creatures that pass through the area must succeed at a Reflex save against your spell DC or fall to the ground, taking bludgeoning damage equal to half the distance fallen.</p>
 <p><strong>Flowing Time</strong> Erratic timestreams aid you within this space. A creature that starts its turn in the burst is affected by @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{Haste} on that turn.</p>
 ------ Description (fr) ------
+<p><strong>Fréquence</strong> une fois par heure</p>
+<hr />
+<p>Bien que la création de demi-plans nécessite généralement de longs rituels, vous savez comment établir des effets planaires mineurs en imitant les chefs-d'œuvre de Syndara. Si votre prochaine action consiste à lancer un sort du niveau ou supérieur depuis vos emplacements de sorts qui affecte une zone, vous pouvez appliquer l'un des effets planaires suivants dans une explosion de 6 m centrée à l'intérieur de la zone du sort. L'effet persiste pendant 1 minute.</p>.
+<ul>
+<li><strong>Morasse gravitationnelle</strong> La gravité est amplifiée ici, créant un terrain très difficile. Les créatures volantes qui traversent la zone doivent réussir un jet de Réflexes contre votre DD de sort ou tomber au sol, en subissant des dégâts contondants égaux à la moitié de la distance de chute.</li>
+<li><strong>Le temps qui coule</strong> Des flux temporels erratiques vous aident dans cet espace. Une créature qui commence son tour dans l'explosion est affectée par @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{Rapidité} à ce tour.</li>
+</ul>
