--- a/data/feats/skill-01-L16JV4LkA3yEuPOt.htm
+++ b/data/feats/skill-01-L16JV4LkA3yEuPOt.htm
@@ -1,9 +1,18 @@
 Name: Assurance (Occultism)
-Nom: 
+Nom: Assurance (Occultisme)
 PrereqEN: |trained in occultism
-PrereqFR: 
-État: aucune
+PrereqFR: qualifié en Occultisme
+État: officielle
+
+------ Benefits and spoiler ----
+Benefits: Receive a fixed result on a skill check.
+Avantage: Vous recevez un résultat fixe à un test d'Occultisme.
 
 ------ Description (en) ------
-<p>Even in the worst circumstances, you can perform basic occultism tasks. You can forgo rolling a skill check for occultism to instead receive a result of 10 + your proficiency bonus (do not apply any other bonuses, penalties, or modifiers).</p>
+<p>Even in the worst circumstances, you can perform basic tasks. Choose a skill you're trained in. You can forgo rolling a skill check for that skill to instead receive a result of 10 + your proficiency bonus (do not apply any other bonuses, penalties, or modifiers).</p>
+<hr />
+<p><strong>Special</strong> You can select this feat multiple times. Each time, choose a different skill and gain the benefits for that skill.</p>
 ------ Description (fr) ------
+<p>Même dans les pires circonstances, vous pouvez effectuer des tâches de base. Vous pouvez vous abstenir d’effectuer un test d'Occultisme pour à la place recevoir un résultat de 10 + votre bonus de maîtrise (aucun autre bonus, malus ou modificateur ne s’applique).</p>
+<hr />
+<p><strong>Spécial</strong> Vous pouvez sélectionner ce don plusieurs fois. À chaque fois, choisissez une compétence différente et gagnez les avantages pour cette compétence.</p>
