--- a/data/feats/archetype-06-zMT3etCcdPdtAdOn.htm
+++ b/data/feats/archetype-06-zMT3etCcdPdtAdOn.htm
@@ -1,9 +1,10 @@
 Name: Butterfly's Kiss
-Nom: 
+Nom: Baiser du papillon
 PrereqEN: |Butterfly Blade Dedication
-PrereqFR: 
-État: aucune
+PrereqFR: Dévouement de Lame papillon
+État: libre
 
 ------ Description (en) ------
 <p>You can make nonlethal Strikes with a butterfly sword without taking a penalty.</p>
 ------ Description (fr) ------
+<p>Vous pouvez faire des Frappes non létales avec une épée papillon sans subir de pénalité.</p>.
