--- a/data/equipment/weapon-00-27CO2NIr5yMgA6sa.htm
+++ b/data/equipment/weapon-00-27CO2NIr5yMgA6sa.htm
@@ -1,7 +1,8 @@
 Name: Leiomano
-Nom: 
-État: aucune
+Nom: Leiomano
+État: libre
 
 ------ Description (en) ------
 <p>This thick club is inset with sharp teeth, typically from a shark, that easily tear flesh. It is the preferred weapon of many Minatan warriors.</p>
 ------ Description (fr) ------
+<p>Ce gourdin épais est incrusté de dents aiguisées, provenant typiquement d'un requin qui déchirent facilement la chair. C'est l'arme de prédilection de nombreux combattants Minatan.</p>
