--- a/data/pathfinder-bestiary-3/MD6eXpxoSPO02fZY.htm
+++ b/data/pathfinder-bestiary-3/MD6eXpxoSPO02fZY.htm
@@ -1,9 +1,12 @@
 Name: Xiuh Couatl
-Nom: 
-État: aucune
+Nom: Coatl xiuh
+État: libre
 
 ------ Description (en) ------
 <p>Couatls are serpentine celestials who tirelessly help mortals reach their greatest potential all across the planes. Some serve benevolent deities as intermediaries while others serve the cause of good as they see fit.</p>
 <hr />
 <p>Fiercer than other couatls, xiuh couatls (pronounced "shoo") are dedicated to seeking out malevolent creatures and offering a final opportunity at redemption.</p>
 ------ Description (fr) ------
+<p>Les coatls sont des serpentins célestes qui aident inlassablement les mortels à atteindre leur plus grand potentiel sur tous les plans. Certains servent des divinités bienveillantes en tant qu'intermédiaires, tandis que d'autres servent la cause du bien comme ils l'entendent.</p>
+<hr />
+<p>Plus féroces que les autres coatls, les coatls xiuh (prononcez "shoo") ont pour mission de rechercher les créatures malveillantes et de leur offrir une dernière chance de rédemption.</p>
