--- a/data/pathfinder-bestiary-3/dVJkFPCqJcPjImdG.htm
+++ b/data/pathfinder-bestiary-3/dVJkFPCqJcPjImdG.htm
@@ -1,9 +1,12 @@
 Name: Mix Couatl
-Nom: 
-État: aucune
+Nom: Coatl mix
+État: libre
 
 ------ Description (en) ------
 <p>Couatls are serpentine celestials who tirelessly help mortals reach their greatest potential all across the planes. Some serve benevolent deities as intermediaries while others serve the cause of good as they see fit.</p>
 <hr />
 <p>Mix couatls (pronounced "meesh") are guides to fledgling societies, providing fundamental information such as farming techniques, medicinal expertise, or more esoteric knowledge like the arcane arts.</p>
 ------ Description (fr) ------
+<p>Les coatls sont des serpentins célestes qui aident inlassablement les mortels à atteindre leur plus grand potentiel sur tous les plans. Certains servent des divinités bienveillantes en tant qu'intermédiaires, tandis que d'autres servent la cause du bien comme ils l'entendent.</p>
+<hr />
+<p>Les coatls mix (prononcez "meesh") sont des guides pour les sociétés naissantes, fournissant des informations fondamentales comme les techniques agricoles, l'expertise médicinale ou des connaissances plus ésotériques comme les arts arcaniques.</p>
