--- a/data/pathfinder-bestiary/oiXbo1VSfDrHpIQm.htm
+++ b/data/pathfinder-bestiary/oiXbo1VSfDrHpIQm.htm
@@ -5,4 +5,4 @@ Nom: Léchi fongique
 ------ Description (en) ------
 Fungus leshys guard caves, bogs, and damp, dark places. Their fungus gardens are bizarre by most standards, but fungus leshys are extremely proud of their works.<br /><br />
 ------ Description (fr) ------
-Les Léchis fongiques protègent les cavernes, les tourbières et les lieux sombres et humides. Leurs jardins de champignons sont extrêmement étranges mais ils sont toujours fiers de leur ouvrage.<br><br>
+<p>Les Léchis fongiques protègent les cavernes, les tourbières et les lieux sombres et humides. Leurs jardins de champignons sont extrêmement étranges mais ils sont toujours fiers de leur ouvrage.</p>
