--- a/data/pathfinder-bestiary-3/esw400AugH9XWq5p.htm
+++ b/data/pathfinder-bestiary-3/esw400AugH9XWq5p.htm
@@ -1,6 +1,6 @@
 Name: Hekatonkheires Titan
-Nom: 
-État: aucune
+Nom: Titan hékatonkhère
+État: libre
 
 ------ Description (en) ------
 <p>Created by ancient deities long before the rise of mortal ancestries, titans united and attempted to overthrow their deific progenitors. The resulting war still figures prominently throughout mortal myths, in which most titans were cast down and imprisoned for eons.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>The first three hekatonkheires were meant to guard the gates to the Abyss, but they proved too terrifying and rebellious-and so, in disgust, the gods cast them into the gulfs between the planes. Hekatonkheires titans are incomplete, monstrous progeny of the original three, from whom these titans calved like icebergs.</p>
 <p>Hekatonkheires wield interstellar darkness as a weapon and spurn the limits of physical reality, literally reaching through space with their countless arms. Filled with a drive to either discover their lost identity or create their own, they metaphysically disembowel ancient beings and cosmic magics-using the entrails to find clues regarding their own nature and parentage or to serve as raw materials for fueling some alien apotheosis.</p>
 ------ Description (fr) ------
+<p>Créés par d'anciennes divinités bien avant l'apparition des ancêtres mortels, les titans se sont unis et ont tenté de renverser leurs géniteurs déifiques. La guerre qui en a résulté figure toujours en bonne place dans les mythes mortels, au cours de laquelle la plupart des titans ont été précipités et emprisonnés pendant des éons.</p>.
+<hr />
+<p>Les trois premiers hékatonkhères étaient destinés à garder les portes de l'Abîme, mais ils se sont révélés trop terrifiants et rebelles - et donc, dégoûtés, les dieux les ont jetés dans les golfes entre les plans. Les titans hékatonkhères  sont des progénitures incomplètes et monstrueuses des trois originaux, à partir desquels ces titans se sont détachés comme des icebergs.</p>
+<p>Les hékatonkhères  manient les ténèbres interstellaires comme une arme et repoussent les limites de la réalité physique, atteignant littéralement l'espace avec leurs innombrables bras. Remplis d'un désir de découvrir leur identité perdue ou de créer la leur, ils éventrent métaphysiquement des êtres anciens et des magies cosmiques - utilisant les entrailles pour trouver des indices concernant leur propre nature et leur filiation ou pour servir de matières premières afin d'alimenter quelque apothéose extraterrestre.</p>
