--- a/data/pathfinder-bestiary-3/xwTZZAEs1sf5RWCq.htm
+++ b/data/pathfinder-bestiary-3/xwTZZAEs1sf5RWCq.htm
@@ -1,9 +1,12 @@
 Name: Danava Titan
-Nom: 
-État: aucune
+Nom: Titan danava
+État: libre
 
 ------ Description (en) ------
 <p>Created by ancient deities long before the rise of mortal ancestries, titans united and attempted to overthrow their deific progenitors. The resulting war still figures prominently throughout mortal myths, in which most titans were cast down and imprisoned for eons.</p>
 <hr />
 <p>Danava titans once regulated the foundational forces that shaped reality. Rebuked by the gods for being harsh and inflexible overseers, these spurned titans joined their siblings in their failed war against their creators. Defeated, the danavas were cast into the paralyzing depths of the cosmos's seas. The few danava titans who have escaped now wield the cold, darkness, and crushing pressure of their prisons in pursuit of their ancient visions of reality. Danavas split mountains, wake primordial beasts, or level whole civilizations in accordance with grand designs they forged at the dawn of time. Others hunt and harvest the balance-enforcing aeons, who they see as usurpers of their divine responsibility.</p>
 ------ Description (fr) ------
+<p>Créés par d'anciennes divinités bien avant l'apparition des ancêtres mortels, les titans se sont unis et ont tenté de renverser leurs géniteurs déifiques. La guerre qui en a résulté figure toujours en bonne place dans les mythes mortels, au cours de laquelle la plupart des titans ont été précipités et emprisonnés pendant des éons.</p>.
+<hr />
+<p>Les titans Danava régulaient autrefois les forces fondamentales qui façonnaient la réalité. Repris par les dieux pour avoir été des surveillants durs et inflexibles, ces titans éconduits ont rejoint leurs frères et sœurs dans leur guerre ratée contre leurs créateurs. Vaincus, les danavas ont été jetés dans les profondeurs paralysantes des mers du cosmos. Les quelques titans danavas qui se sont échappés manient maintenant le froid, l'obscurité et la pression écrasante de leurs prisons à la poursuite de leurs anciennes visions de la réalité. Les danavas fendent des montagnes, réveillent des bêtes primordiales ou nivellent des civilisations entières selon les grands desseins qu'ils ont forgés à l'aube des temps. D'autres chassent et récoltent les éons chargés d'assurer l'équilibre, qu'ils considèrent comme des usurpateurs de leur responsabilité divine.</p>
