--- a/data/pathfinder-bestiary-3/fcFQ2GDUZ9YAhiDC.htm
+++ b/data/pathfinder-bestiary-3/fcFQ2GDUZ9YAhiDC.htm
@@ -1,8 +1,10 @@
 Name: Animated Trebuchet
-Nom: 
-État: aucune
+Nom: Trébuchet animé
+État: libre
 
 ------ Description (en) ------
 <p>Many animated objects have useful functions but become dangers when uncontrolled.</p>
 <p>Large armies sometimes pay exorbitant fees to animate their siege weapons.</p>
 ------ Description (fr) ------
+<p>De nombreux objets animés ont des fonctions utiles mais deviennent des dangers lorsqu'ils ne sont pas contrôlés.</p>
+<p>Les grandes armées paient parfois des prix exorbitants pour animer leurs armes de siège.</p>
