--- a/data/pathfinder-bestiary-3/FjZ737XIvSOSaYcA.htm
+++ b/data/pathfinder-bestiary-3/FjZ737XIvSOSaYcA.htm
@@ -1,9 +1,12 @@
 Name: Tyrannosaurus Skeleton
-Nom: 
-État: aucune
+Nom: Squelette Tyrannosaure
+État: libre
 
 ------ Description (en) ------
 <p>Almost any creature that had bones in life and leaves them behind in death can become&nbsp;a shambling, undead skeleton-humanoids, beasts, aberrations, fey, and more.</p>
 <hr />
 <p>A massive dinosaur predator makes for a fearsome skeleton.</p>
 ------ Description (fr) ------
+<p>Presque toutes les créatures qui avaient des os dans la vie et les laissent derrière elles dans la mort. Elles peuvent s'animer en un squelette ambulant et mort-vivant - humanoïdes, bêtes, aberrations, fey, et plus encore.</p>.
+<hr />
+<p>Un squelette de prédateur massif de dinosaures constitue un squelette redoutable.</p> 
