--- a/data/pathfinder-bestiary-3/SaNOrmVDvQGX5U1D.htm
+++ b/data/pathfinder-bestiary-3/SaNOrmVDvQGX5U1D.htm
@@ -1,9 +1,12 @@
 Name: Harpy Skeleton
-Nom: 
-État: aucune
+Nom: Squelette de harpie
+État: libre
 
 ------ Description (en) ------
 <p>Almost any creature that had bones in life and leaves them behind in death can become a shambling, undead skeleton-humanoids, beasts, aberrations, fey, and more.</p>
 <hr />
 <p>A live harpy's song is compelling and captivating; a harpy skeleton's is anything but, rending the target's mind.</p>
 ------ Description (fr) ------
+<p>Presque toutes les créatures qui avaient des os dans la vie et les laissent derrière elles dans la mort. Elles peuvent s'animer en un squelette ambulant et mort-vivant - humanoïdes, bêtes, aberrations, fey, et plus encore.</p>.
+<hr />
+<p>Le chant d'une harpie vivante est irrésistible et captivant ; celui d'un squelette de harpie est tout autre, déchirant l'esprit de la cible.</p>
