--- a/data/pathfinder-bestiary-3/fLyIWlTCW3cUPjvd.htm
+++ b/data/pathfinder-bestiary-3/fLyIWlTCW3cUPjvd.htm
@@ -1,8 +1,10 @@
 Name: Animated Furnace
-Nom: 
-État: aucune
+Nom: Fourneau animé
+État: libre
 
 ------ Description (en) ------
 <p>Many animated objects have useful functions but become dangers when uncontrolled.</p>
 <p>This huge forge or oven is animated to protect a workspace or kitchen, travel alongside its owner, or both.</p>
 ------ Description (fr) ------
+<p>De nombreux objets animés ont des fonctions utiles mais deviennent des dangers lorsqu'ils ne sont pas contrôlés.</p>
+<p>Cette énorme forge ou four est animée pour protéger un espace de travail ou une cuisine, voyager aux côtés de son propriétaire, ou les deux.</p>.
