--- a/data/pathfinder-bestiary-3/fuCPoL2OVcQf5uT9.htm
+++ b/data/pathfinder-bestiary-3/fuCPoL2OVcQf5uT9.htm
@@ -1,6 +1,6 @@
 Name: Ovinnik
-Nom: 
-État: aucune
+Nom: Ovinik (Esprit de la maison)
+État: libre
 
 ------ Description (en) ------
 <p>House spirits are shy, often helpful, sometimes wrathful fey that dwell alongside peasants and farmers. They reside in the house, in the yard, in the granary, in the bathhouse-wherever people build and live. Due to this proximity, house spirits often take on the mannerisms or appearance of nearby mortals. Their reclusive nature and tendency to go unseen earned them the moniker of "spirits," though in truth they are fully embodied fey.</p>
@@ -8,3 +8,7 @@ Nom:
 <hr />
 <p>The ovinnik is the most ferocious of house spirits, and the only one that will kill if sufficiently angered. They live in granaries, storage rooms, and sheds where food-particularly grain-is kept. Ovinniks resemble bipedal cats but bark like a dog to scare away thieves, and they often demand gifts of milk, pancakes, and dead roosters.</p>
 ------ Description (fr) ------
+<p>Les esprits des maisons sont des feys timides, souvent serviables, parfois courroucés, qui habitent aux côtés des paysans et des fermiers. Ils résident dans la maison, dans la cour, dans le grenier, dans la salle de bain - partout où les gens construisent et vivent. En raison de cette proximité, les esprits de la maison adoptent souvent les manières ou l'apparence des mortels du voisinage. Leur nature recluse et leur tendance à passer inaperçus leur ont valu le surnom d'" esprits ", bien qu'en vérité, ils soient des fey pleinement incarnés.</p> 
+<p>Les esprits des maisons portent un intérêt presque parental à " leurs " mortels. Lorsqu'on leur accorde le respect approprié, ces fey travaillent sans relâche pour leurs protégés - ils coupent le bois, s'occupent du bétail, raccommodent les vêtements, balaient le sol et s'occupent du poêle. Cependant, s'il est offensé, l'esprit de la maison devient une menace, effrayant les animaux ou les enfants et ruinant les biens.</p>
+<hr />
+<p>L'ovinnik est le plus féroce des esprits de maison, et le seul qui tue s'il est suffisamment énervé. Ils vivent dans les greniers, les salles de stockage et les hangars où la nourriture - en particulier les céréales - est conservée. Les ovinniks ressemblent à des chats bipèdes mais aboient comme un chien pour effrayer les voleurs, et ils exigent souvent des cadeaux de lait, de crêpes et de coqs morts.</p>
