--- a/data/equipment/equipment-16-son3QT3YfrBYlWPq.htm
+++ b/data/equipment/equipment-16-son3QT3YfrBYlWPq.htm
@@ -1,5 +1,5 @@
 Name: Headbands of Translocation
-Nom: 
+Nom: Bandeau de translocalisation
 État: aucune
 
 ------ Description (en) ------
@@ -9,3 +9,8 @@ Nom:
 <p><strong>Frequency</strong> once per day;</p>
 <p><strong>Effect</strong> You remove your headband, which teleports you to a space adjacent to the other Invested wearer's location, if you are within 1 mile of each other.</p>
 ------ Description (fr) ------
+<p>Ces bandeaux en soie vont toujours par deux et portent généralement le symbole d'une nation ou d'une équipe. Si les deux porteurs imprègnent leurs bandeaux en même temps et pensent au même symbole en le faisant, les deux bandeaux changent pour afficher ce symbole jusqu'à ce qu'ils soient retirés. Tant que vous avez tous deux imprégnés vos bandeaux, vous pouvez vous Aider mutuellement sans avoir à dépenser d'action pour vous préparer et si vous obtenez un échec critique en tentant d'Aider l'allié portant le bandeau apparié, vous obtenez un échec à la place.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Interaction ;</p>
+<p><strong>Fréquence</strong> une fois par jour ;</p>
+<p><strong>Effet</strong> Vous retirez votre bandeau, ce qui vous téléporte jusqu'à une case adjacente au porteur de l'autre bandeau apparié qui l'a imprégné, si vous êtes dans les 1,5 km l'un de l'autre.</p>
