--- a/data/equipment/weapon-00-JuR0cug2xq4sWxHR.htm
+++ b/data/equipment/weapon-00-JuR0cug2xq4sWxHR.htm
@@ -1,6 +1,6 @@
 Name: Butterfly Sword
 Nom: épée papillon
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>This short, single-edged sword typically features a cross guard that helps catch oncoming attacks. It is the preferred weapon of Butterfly Blades-highly skilled Gokan assassins.</p>
