--- a/data/equipment/weapon-19-jBn5TdnxOvzf6a1F.htm
+++ b/data/equipment/weapon-19-jBn5TdnxOvzf6a1F.htm
@@ -1,6 +1,6 @@
 Name: Sky-Piercing Bow
-Nom: 
-État: aucune
+Nom: Arc Perce-ciel
+État: libre
 
 ------ Description (en) ------
 <p>This shortbow is made from horn, wood, and sinew laminated together to increase the power of its pull and the force of its projectile. Its compact size and power make it a favorite of mounted archers. Any time an ability is specifically restricted to a shortbow, it also applies to composite shortbows unless otherwise stated.</p>
